# zigma-old

./: .clang-format  CMakeLists.txt  README.md
zigma/: base64.c  base64.h  driver.c  kvlist.c  kvlist.h  matrix.c  matrix.h  zigma.c  zigma.h
